k8s/catalog.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: catalog
spec:
  paused: false
  template:
    metadata:
      labels:
        app: eshop
        component: catalog
    spec:
      containers:
      - name: catalog
        image: fseshop.azurecr.io/catalog.api:v1.65
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        
      imagePullSecrets:
      - name: registry-key
---
