k8s/test.pod.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: nginxpod
  name: nginxpod
spec:
  containers:
  - image: nginx
    imagePullPolicy: IfNotPresent
    name: nginxpod
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Never
status: {}
